# HelloJni

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/clam314/hellojni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ffmpeg-hello.cpp  ffmpeg-hello.h  hello-jni.cpp  hello-jni.h  native-lib.cpp
app/src/main/java/com/clam314/hellojni/: FFmpegHelloActivity.java  HelloJniActivity.java  MainActivity.java  ParameterTest.java
app/src/main/res/layout/: activity_ffmpeg_hello.xml  activity_hello_jni.xml  activity_main.xml
app/src/test/java/com/clam314/hellojni/: ExampleUnitTest.java
